<resources>
    <string name="app_name">Make_A_Cocktail</string>

    <string name="name">Name</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="enter_email">Enter email</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="facebook_login">FACEBOOK LOGIN</string>
    <string name="shop">Shop</string>
    <string name="shopping_list">Shoping List</string>
    <string name="bar_shelf">Bar Shelf</string>
    <string name="search">Search</string>
    <string-array name="glasses">
        <item>Cocktail glass</item>
        <item>Coupette glass</item>
        <item>Shot glass</item>
    </string-array>
    <string-array name="drinks">
        <item>Vodka</item>
        <item>Whiskey</item>
        <item>Tequila</item>
        <item>White Rum</item>
        <item>Dark Rum</item>
        <item>Amaretto</item>
    </string-array>
    <string-array name="menu">
        <item></item>
        <item>Coctails</item>
        <item>Ingridients</item>
        <item>Random</item>
        <item>Profile</item>
        <item>New</item>
    </string-array>

    <string-array name="categories">
        <item>Categories</item>
        <item>Alcoholic cocktail</item>
        <item>NonAlcoholic cocktail</item>
        <item>Shot</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test_shop">TestShopActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drink_name">Drink name</string>
    <string name="instructions">Instructions</string>
    <string name="upload_image">Upload photo</string>
    <string name="add_drink">Add drink</string>
    <string name="alcoholic">Alcoholic</string>


</resources>
