<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellowBackground"
    tools:context="com.example.pesho.make_a_cocktail.AddNewDrinkActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="Add new drink"
        android:layout_margin="10dp"
        android:id="@+id/add_new_drink_TV"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_drink_TV"
        android:gravity="center"
        android:hint="@string/drink_name"
        android:lines="1"
        android:inputType="text"
        android:layout_margin="10dp"
        android:id="@+id/add_new_drink_name_ET"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_drink_name_ET"
        android:gravity="center"
        android:hint="@string/instructions"
        android:layout_margin="10dp"
        android:id="@+id/add_new_drink_instructions_ET"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_drink_instructions_ET"
        android:gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/add_new_drink_category_spinner"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_drink_category_spinner"
        android:gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/add_new_drink_glass_spinner"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_drink_glass_spinner"
        android:id="@+id/add_new_drink_CB"
        android:checked="true"
        android:text="@string/alcoholic"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_drink_CB"
        android:text="@string/upload_image"
        android:gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/add_new_drink_up_photo_button"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_new_drink_up_photo_button"
        android:text="@string/add_drink"
        android:gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/add_new_drink_add_drink_button"
        />

</RelativeLayout>
