<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/yellowBackground"
    tools:context="com.example.pesho.make_a_cocktail.ShopActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/SPActionBar"
        >
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/SPMenu"
            android:background="@drawable/menu_icon"
            >
        </Spinner>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/SPCategories"
            ></Spinner>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/SPSearch"
            android:background="@drawable/search_icon"
            ></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/SPActionBar"
        android:id="@+id/SPButtonsLayout"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/shop"
            android:id="@+id/SPShopButton" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="12dp"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list"
            android:id="@+id/SPShopingListButton" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="@string/bar_shelf"
            android:id="@+id/SPBarShelfButton" />


    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SPButtonsLayout"
        android:id="@+id/SPListView"
        ></ListView>


</RelativeLayout>
